--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
       "last 1 safari version"
     ]
   },
-  "name": "joy-dashboard",
+  "name": "joy-ui-template",
   "version": "0.0.0",
-  "license": "ISC"
+  "license": "MIT"
 }
